--- a/Sitter/AndroidManifest.xml
+++ b/Sitter/AndroidManifest.xml
@@ -5,8 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="20"
+        android:minSdkVersion="19"
         android:targetSdkVersion="21" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service
+            android:name="com.solstice.sitterble.BLEService"
+            android:enabled="true" />
+        
+         <service
+            android:name="com.solstice.sitterble.WeightSensorService"
+            android:enabled="true">
+        </service>
+        
+         <service
+            android:name="com.solstice.sitterble.BLEService"
+            android:enabled="true">
+         </service>
     </application>
 
 </manifest>
