--- a/SitterBLE/AndroidManifest.xml
+++ b/SitterBLE/AndroidManifest.xml
@@ -7,11 +7,38 @@
         android:minSdkVersion="20"
         android:targetSdkVersion="21" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        
+         <service
+            android:name=".WeightSensorService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+        
+         <service
+            android:name=".BLEService"
+            android:enabled="true"
+            android:exported="true">
+         </service>
+
+        <receiver
+            android:name="com.solstice.sitterble.BootStartUpReciever"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </receiver>
+        
+        
     </application>
 
 </manifest>
