--- a/Sitter/AndroidManifest.xml
+++ b/Sitter/AndroidManifest.xml
@@ -6,13 +6,13 @@
 
     <uses-sdk
         android:minSdkVersion="19"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/joshua_image"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
