--- a/Sitter/AndroidManifest.xml
+++ b/Sitter/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="21" />
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -17,29 +18,36 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <service
             android:name="com.solstice.sitterble.BLEService"
             android:enabled="true" />
-        
-         <service
+        <service
             android:name="com.solstice.sitterble.WeightSensorService"
-            android:enabled="true">
+            android:enabled="true" >
         </service>
-        
-         <service android:name="com.solstice.sitterble.BluetoothProximityService"/>
-        
-         <service
+        <service android:name="com.solstice.sitterble.BluetoothProximityService" />
+        <service
             android:name="com.solstice.sitterble.BLEService"
-            android:enabled="true">
-         </service>
+            android:enabled="true" >
+        </service>
+
+        <receiver
+            android:name="com.solstice.sitter.notifications.DismissNotificationReceiver"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="notification_cancelled" >
+                </action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
